[package]
name = "shelgon"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["tokio/rt"]

[dependencies]
tokio = { version = "1.43.0", features = ["rt"], optional = true }
anyhow = "1.0.95"
ratatui = "0.29.0"
crossterm = "0.28.1"

tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[[example]]
name = "echosh"
required-features = ["tokio"]  # If needed
