[package]
name = "shelgon"
version = "0.1.0"
edition = "2021"
authors = ["Nishant Joshi"]
description = "A robust framework for building interactive REPL applications and custom shells in Rust"
documentation = "https://docs.rs/shelgon"
repository = "https://github.com/nishantjoshi00/shelgon"
homepage = "https://github.com/nishantjoshi00/shelgon"
license-file = "LICENSE"
readme = "README.md"
keywords = ["repl", "shell", "terminal", "tui", "cli"]
categories = ["command-line-interface", "development-tools"]

# Exclude unnecessary files from crates.io package
exclude = [
    "/.github",
    "/.gitignore",
    "*.png",
]
rust-version = "1.78"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "tokio/rt"]

[dependencies]
tokio = { version = "1.43.0", features = ["rt"], optional = true }
anyhow = "1.0.95"
ratatui = "0.29.0"
crossterm = "0.28.1"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[[example]]
name = "echosh"
required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
maintenance = { status = "actively-developed" }
